--- a/TypeX Notepad/MainWindow.xaml
+++ b/TypeX Notepad/MainWindow.xaml
@@ -1,18 +1,29 @@
-﻿<Window x:Class="TypeX_Notepad.MainWindow"
+﻿<Window x:Name="MainWindowForm" x:Class="TypeX_Notepad.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TypeX_Notepad"
+        xmlns:prop="clr-namespace:TypeX_Notepad.Properties"
         mc:Ignorable="d"
-        Title="TypeX Notepad" Height="450" Width="800">
+        Title="TypeX Notepad" Height="450" Width="800" Loaded="MainForm_Loaded">
     <Window.CommandBindings>
         <CommandBinding Command="ApplicationCommands.New" CanExecute="New_CanExecute" 
                         Executed="New_Executed"/>
         <CommandBinding Command="ApplicationCommands.Open" CanExecute="Open_CanExecute"
                         Executed="Open_Executed"/>
+        <CommandBinding Command="ApplicationCommands.Undo" CanExecute="Undo_CanExecute"
+                        Executed="Undo_Executed"/>
+        <CommandBinding Command="ApplicationCommands.Redo" CanExecute="Redo_CanExecute"
+                        Executed="Redo_Executed"/>
+        <CommandBinding Command="ApplicationCommands.Close" CanExecute="Exit_CanExecute"
+                        Executed="Exit_Executed"/>
     </Window.CommandBindings>
-    <Grid>
+    <Window.Resources>
+        <prop:Settings x:Key="settings"/>
+        <BooleanToVisibilityConverter x:Key="BoolToVis"/>
+    </Window.Resources>
+    <Grid DataContext="{StaticResource settings}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
@@ -57,37 +68,67 @@
                     <Separator/>
                     <MenuItem x:Name="TimeDate" Header="Time/Date"/>
                 </MenuItem>
-                <MenuItem x:Name="Customise" Header="Customise" Margin="0,0,10,0"/>
-                <MenuItem x:Name="View" Header="View" Margin="0,0,10,0"/>
-                <MenuItem x:Name="Help" Header="Help" Margin="0,0,10,0"/>
+                <MenuItem x:Name="Customise" Header="Customise" Margin="0,0,10,0">
+                    <MenuItem x:Name="DarkTheme" Header="Dark Theme" IsCheckable="True"/>
+                    <MenuItem x:Name="Font" Header="Font" Click="Font_Click"/>
+                    <MenuItem x:Name="WordWrap" Header="Word Wrap" IsCheckable="True"
+                              Checked="WordWrap_Checked"
+                              Unchecked="WordWrap_Unchecked"
+                              />
+                    <MenuItem x:Name="SpellCheck" Header="SpellCheck" IsCheckable="True" 
+                              Checked="SpellCheck_Checked"
+                              Unchecked="SpellCheck_Unchecked"/>
+                </MenuItem>
+                <MenuItem x:Name="Tools" Header="Tools" Margin="0,0,10,0">
+                    <MenuItem x:Name="TypexMemo" Header="TypeX Memo"/>
+                    <MenuItem x:Name="OCR" Header="OCR"/>
+                </MenuItem>
+                <MenuItem x:Name="View" Header="View" Margin="0,0,10,0">
+                    <MenuItem x:Name="ZoomIn" Header="Zoom In"/>
+                    <MenuItem x:Name="ZoomOut" Header="Zoom Out"/>
+                    <MenuItem x:Name="RestoreDefaultZoom" Header="Restore Default Zoom"/>
+                    <MenuItem x:Name="StatusBar" Header="Status Bar" IsCheckable="True"
+                              Checked="StatusBar_Checked"
+                              Unchecked="StatusBar_Unchecked"/>
+                </MenuItem>
+                <MenuItem x:Name="HelpMenu" Header="Help" Margin="0,0,10,0">
+                    <MenuItem x:Name="HelpItem" Header="Help"/>
+                    <MenuItem x:Name="AboutUs" Header="About TypeX Notepad"/>
+                </MenuItem>
             </Menu>
         </DockPanel>
         <TextBox x:Name="TextBox" Grid.Row="1" Grid.Column="0" 
                  Text="Drag and drop a file here or start typing" 
                  FontSize="24"
+                 FontFamily="{Binding Path=Default.DefaultFont,Mode=TwoWay}"
                  BorderThickness="0"
                  AcceptsReturn="True" AcceptsTab="True" 
                  VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-                 TextWrapping="Wrap" SpellCheck.IsEnabled="True"
+                 TextWrapping="{Binding Path=Default.WordWrapSet,Mode=TwoWay}" SpellCheck.IsEnabled="{Binding Path=Default.SpellCheckSet,Mode=TwoWay}"
                  HorizontalScrollBarVisibility="Auto"
-                 VerticalScrollBarVisibility="Visible"/>
-        <StatusBar Grid.Column="0" Grid.Row="2">
-            <StatusBarItem>
-                <TextBlock x:Name="LineLabel" Text="Line:" FontSize="12" Margin="6,0,0,0"/>
+                 VerticalScrollBarVisibility="Visible" TextChanged="TextBox_TextChanged"/>
+        <StatusBar x:Name="StatusBarElement" Grid.Row="2" Grid.Column="0"
+                   Visibility="{Binding Path=Default.StatusBarSet,Converter={StaticResource BoolToVis},Mode=TwoWay}">
+            <StatusBarItem Margin="6,0,0,0">
+                <TextBlock x:Name="LineLabel" Text="Line : " FontSize="13"/>
             </StatusBarItem>
-            <StatusBarItem>
-                <TextBlock x:Name="ColLabel" Text="Col:" FontSize="12" Margin="6,0,0,0"/>
+            <StatusBarItem Margin="6,0,0,0">
+                <TextBlock x:Name="ColLabel" Text="Col : " FontSize="13"/>
             </StatusBarItem>
-            <StatusBarItem>
-                <TextBlock x:Name="WordsLabel" Text="Words:" FontSize="12" Margin="6,0,0,0"/>
+            <StatusBarItem Margin="6,0,0,0">
+                <TextBlock x:Name="WordsLabel" Text="Words : " FontSize="13"/>
             </StatusBarItem>
-            <StatusBarItem>
-                <TextBlock x:Name="ZoomLabel" Text="100%" FontSize="12" Margin="6,0,0,0"/>
+            <StatusBarItem Margin="6,0,0,0">
+                <TextBlock x:Name="ZoomLabel" Text="100%" FontSize="13"/>
             </StatusBarItem>
-            <StatusBarItem>
-                <TextBlock x:Name="AutoSaveLabel" Text="Saving the text as you are typing..." 
-                           Visibility="Hidden"
-                           FontSize="12" Margin="6,0,0,0"/>
+            <StatusBarItem Margin="6,0,0,0">
+                <TextBlock x:Name="EncodingLabel" Text="UTF-8" FontSize="13"/>
+            </StatusBarItem>
+            <StatusBarItem Margin="6,0,0,0">
+                <TextBlock x:Name="AutosaveLabel" Text="Saving the text as you are typing..." 
+                           FontSize="13"
+                           Visibility="{Binding Path=Default.AutoSaveSet,Converter={StaticResource BoolToVis}}"
+                           />
             </StatusBarItem>
         </StatusBar>
     </Grid>
