--- a/TypeX Notepad/App.xaml
+++ b/TypeX Notepad/App.xaml
@@ -2,8 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TypeX_Notepad"
-             StartupUri="MainWindow.xaml">
+             Startup="Application_Startup">
     <Application.Resources>
          
     </Application.Resources>
 </Application>
+
+    
